skills/azure-cloud-deploy/assets/arm-base-templates/vnet-nsg-base.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": { "description": "Base VNet + NSG template. Use as foundation for any pattern." },
  "parameters": {
    "projectName": { "type": "string" },
    "location": { "type": "string", "defaultValue": "[resourceGroup().location]" },
    "vnetAddressPrefix": { "type": "string", "defaultValue": "10.0.0.0/16" },
    "subnetPrefix": { "type": "string", "defaultValue": "10.0.0.0/24" },
    "allowSSH": { "type": "bool", "defaultValue": true }
  },
  "variables": {
    "vnetName": "[format('{0}-vnet', parameters('projectName'))]",
    "subnetName": "default",
    "nsgName": "[format('{0}-nsg', parameters('projectName'))]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-09-01",
      "name": "[variables('nsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          { "name": "AllowHTTP", "properties": { "priority": 100, "direction": "Inbound", "access": "Allow", "protocol": "Tcp", "sourcePortRange": "*", "destinationPortRange": "80", "sourceAddressPrefix": "*", "destinationAddressPrefix": "*" } },
          { "name": "AllowHTTPS", "properties": { "priority": 110, "direction": "Inbound", "access": "Allow", "protocol": "Tcp", "sourcePortRange": "*", "destinationPortRange": "443", "sourceAddressPrefix": "*", "destinationAddressPrefix": "*" } }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-09-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "dependsOn": ["[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"],
      "properties": {
        "addressSpace": { "addressPrefixes": ["[parameters('vnetAddressPrefix')]"] },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetPrefix')]",
              "networkSecurityGroup": { "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]" }
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "vnetId": { "type": "string", "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]" },
    "subnetId": { "type": "string", "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('subnetName'))]" },
    "nsgId": { "type": "string", "value": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]" }
  }
}
